--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -77,6 +77,7 @@
 @import "material-kit/ripples";
 @import "material-kit/headers";
 @import "material-kit/footers";
+@import "material-kit/sidebar";
 
 // Cards
 @import 'material-kit/cards';
