--- a/static/assets/css/hesti.css
+++ b/static/assets/css/hesti.css
@@ -8193,6 +8193,22 @@ footer {
   .footer-black hr {
     border-color: rgba(255, 255, 255, 0.2); }
 
+.sidebar .title {
+  margin-bottom: 0; }
+
+.sidebar ul {
+  margin-top: 13px;
+  list-style: none;
+  padding-left: 0; }
+  .sidebar ul li {
+    margin-bottom: 8px;
+    padding-bottom: 7px;
+    border-bottom: 1px dashed #f1f1f1;
+    line-height: 21px;
+    font-size: 14px;
+    font-weight: 400;
+    text-transform: uppercase; }
+
 .card {
   border: 0;
   margin-bottom: 30px;
