Fix color on warframe page

--- a/layouts/partials/warframe-page/ability-section.html
+++ b/layouts/partials/warframe-page/ability-section.html
@@ -7,10 +7,10 @@
 					<img class="rounded-circle lazyload" data-sizes="auto" data-src="{{ .ability.image }}" alt="{{ .ability.name }}">	
 				</div>
 			</div>
-			<div class="col-md-6 {{- cond (eq .side "right") " order-md-first" "" -}}">
+			<div class="abiility-description col-md-6 {{- cond (eq .side "right") " order-md-first" "" -}}">
 				{{- $alignContent := cond (eq .side "left") " justify-content-start" " justify-content-end" -}}
 				<h2 class="title d-flex {{- $alignContent -}}">{{ .ability.name }}</h2>
-				<div class="abiility-description content  {{- $alignContent -}}">
+				<div class="content {{- $alignContent -}}">
 					{{ .ability.description | safeHTML }}
 				</div>
 			</div>
