--- a/static/assets/css/warframe-page.css
+++ b/static/assets/css/warframe-page.css
@@ -79,18 +79,12 @@
 .hero .navbar.is-not-transparent {
   background: #2e3141; }
 
-.warframe-page {
-  background-color: #2e3141;
-  background-size: auto, cover;
-  background-attachment: fixed, fixed;
-  background-position: center, center; }
-
-.frame-hero-section h1 {
+.title {
+  color: white;
   border-bottom: solid 2px rgba(255, 255, 255, 0.125); }
 
-.frame-ability {
-  position: relative;
-  padding-top: 200px; }
+.abiility-description {
+  color: white; }
 
 .frame-first-ability {
   background-color: #4c5c96;
@@ -166,6 +160,7 @@
   background-color: #2e3141;
   padding-top: 150px;
   padding-bottom: 150px;
+  color: white;
   position: relative; }
   .frame-builds-section::after {
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' preserveAspectRatio='none' viewBox='0 0 100 100' fill='rgb(46,49,65)' fill-opacity='1'%3E%3Cpolygon points='0,0 100,0 0,100'%3E%3C/polygon%3E%3C/svg%3E");
@@ -182,6 +177,7 @@
     bottom: -100px; }
 
 .footer-image {
+  background-color: #2e3141;
   background-size: cover;
   background-attachment: fixed, fixed;
   background-position: center, center; }
