--- a/layouts/partials/warframe-page/ability-section.html
+++ b/layouts/partials/warframe-page/ability-section.html
@@ -7,7 +7,7 @@
 					<img class="rounded-circle lazyload" data-sizes="auto" data-src="{{ .ability.image }}" alt="{{ .ability.name }}">	
 				</div>
 			</div>
-			<div class="abiility-description col-md-6 {{- cond (eq .side "right") " order-md-first" "" -}}">
+			<div class="abiility-body col-md-6 {{- cond (eq .side "right") " order-md-first" "" -}}">
 				{{- $alignContent := cond (eq .side "left") " justify-content-start" " justify-content-end" -}}
 				<h2 class="title d-flex {{- $alignContent -}}">{{ .ability.name }}</h2>
 				<div class="content {{- $alignContent -}}">
