Migrate inventory shortcode to new styles

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -68,6 +68,7 @@
 @import "material-kit/images";
 @import "material-kit/navbar";
 @import "material-kit/pagination";
+@import "material-kit/pills";
 @import "material-kit/info-areas";
 @import "material-kit/type";
 @import "material-kit/tabs";
