--- a/static/assets/css/warframe-page.css
+++ b/static/assets/css/warframe-page.css
@@ -83,7 +83,7 @@
   color: white;
   border-bottom: solid 2px rgba(255, 255, 255, 0.125); }
 
-.abiility-description {
+.abiility-body {
   color: white; }
 
 .frame-first-ability {
