--- a/layouts/shortcodes/inventory.html
+++ b/layouts/shortcodes/inventory.html
@@ -1,23 +1,23 @@
 <h2>Baro Ki'Teer Inventory</h2>
 
-<ul class="nav nav-tabs trader">
-	<li class="active"><a data-toggle="tab" href="#pc">PC</a></li>
-	<li><a data-toggle="tab" href="#ps4">PS4</a></li>
-	<li><a data-toggle="tab" href="#xb1">XBox One</a></li>
-	<li><a data-toggle="tab" href="#swi">Nintendo Switch</a></li>
+<ul class="nav nav-pills nav-pills-info">
+	<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#pc">PC</a></li>
+	<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#ps4">PS4</a></li>
+	<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#xb1">XBox One</a></li>
+	<li class="nav-item"><a class="nav-link"data-toggle="tab" href="#swi">Nintendo Switch</a></li>
 </ul>
 
-<div class="tab-content trader-content">
-	<div id="pc" class="tab-pane fade in active">
+<div class="tab-content tab-space" style="padding-bottom: 0;">
+	<div id="pc" class="tab-pane active show">
 		{{- partial "voidtrader.html" (dict "trader" $.Site.Data.trader.pc) -}}
 	</div>
-	<div id="ps4" class="tab-pane fade">
+	<div id="ps4" class="tab-pane">
 		{{- partial "voidtrader.html" (dict "trader" $.Site.Data.trader.ps4) -}}
 	</div>
-	<div id="xb1" class="tab-pane fade">
+	<div id="xb1" class="tab-pane">
 		{{- partial "voidtrader.html" (dict "trader" $.Site.Data.trader.xb1) -}}
 	</div>
-	<div id="swi" class="tab-pane fade">
+	<div id="swi" class="tab-pane">
 		{{- partial "voidtrader.html" (dict "trader" $.Site.Data.trader.swi) -}}
 	</div>
 </div>
