Remove excess bottom padding from warframe page builds section

--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -17,7 +17,7 @@
 {{- partial "warframe-page/ability-section.html" (dict "ability" $ability "side" $side "num" $abilityNum) -}}
 {{- end -}}
 
-<section class="section frame-builds-section">
+<section class="frame-builds-section">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
