Reuse new style components

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -89,4 +89,6 @@
 
 // Sections and Example pages
 @import "material-kit/example-pages";
+@import 'material-kit/sections/headers-extend';
+@import 'material-kit/sections/footers-extend';
 @import "material-kit/responsive";
