Remove excess top padding

--- a/layouts/partials/voidtrader.html
+++ b/layouts/partials/voidtrader.html
@@ -1,5 +1,5 @@
 {{ if .trader.active}}
-<p style="padding-top: 10px;"><b>Location:</b> {{ .trader.location }} </p>
+<p><b>Location:</b> {{ .trader.location }} </p>
 
 <div class="table-responsive">          
 	<table class="table">
