Migrate acolytes widget to material styles

--- a/layouts/shortcodes/acolytes.html
+++ b/layouts/shortcodes/acolytes.html
@@ -1,23 +1,18 @@
 <h2>Current Acolytes</h2>
 <p id="acolytes-countdown"></p>
 
-<ul class="nav nav-tabs trader">
-	<li class="active"><a data-toggle="tab" href="#pc">PC</a></li>
-	<li><a data-toggle="tab" href="#ps4">PS4</a></li>
-	<li><a data-toggle="tab" href="#xb1">XBox One</a></li>
-	<li><a data-toggle="tab" href="#swi">Nintendo Switch</a></li>
+<ul class="nav nav-pills nav-pills-primary">
+	<li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#pc">PC</a></li>
+	<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#ps4">PS4</a></li>
+	<li class="nav-item"><a class="nav-link" data-toggle="tab" href="#xb1">XBox One</a></li>
+	<li class="nav-item"><a class="nav-link"data-toggle="tab" href="#swi">Nintendo Switch</a></li>
 </ul>
 
-<div class="tab-content trader-content">
-	<div id="pc" class="tab-pane fade in active">
-
-	</div>
-	<div id="ps4" class="tab-pane fade">
-	</div>
-	<div id="xb1" class="tab-pane fade">
-	</div>
-	<div id="swi" class="tab-pane fade">
-	</div>
+<div class="tab-content tab-space" style="padding-bottom: 0;">
+	<div id="pc" class="tab-pane active show"></div>
+	<div id="ps4" class="tab-pane"></div>
+	<div id="xb1" class="tab-pane"></div>
+	<div id="swi" class="tab-pane"></div>
 </div>
 
 <script type="text/javascript">
@@ -62,7 +57,7 @@
 				var currentAcolytes = JSON.parse(xhr.responseText);
 				if(currentAcolytes.length === 0) {
 					var noAcolytesElement = document.createElement('p');
-					noAcolytesElement.className = 'hestia-title bold';
+					noAcolytesElement.className = '';
 					noAcolytesElement.innerHTML = 'No Acolytes are around yet.';
 					platformContent.appendChild(noAcolytesElement);
 				} else {
