Customize styles for card on warframe page

--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -19,7 +19,7 @@
 
 <section class="frame-builds-section">
 	<div class="container">
-		<div class="row">
+		<div class="row justify-content-center">
 			<div class="col-md-12">
 				<h2 class="title">{{ $frame.name }} Builds</h2>
 				<p>{{ $frame.affectedByMods }}</p>
