--- a/src/styles/warframe-page.scss
+++ b/src/styles/warframe-page.scss
@@ -4,3 +4,4 @@
 @import 'components/warframe-list';
 @import 'warframe-page/_bulma';
 @import 'warframe-page/_sections';
+@import 'warframe-page/_card';
