Set white text color on fortuna page

--- a/layouts/fortuna/list.html
+++ b/layouts/fortuna/list.html
@@ -1,3 +1,6 @@
+{{ define "extra-styles" }}
+	<link rel="stylesheet" href="/assets/css/fortuna.css">
+{{ end }}
 {{- define "main" -}}
 <section class="section" style="background-color: #122734">
 	<div class="container">
