Define main-body to override content

--- a/layouts/warframes/single.html
+++ b/layouts/warframes/single.html
@@ -9,7 +9,7 @@
 	<p>{{ $frame.passive | safeHTML }}</p>	
 </div>
 {{- end -}}
-{{- define "main" -}}
+{{- define "main-body" -}}
 
 {{ $frame := index .Site.Data.frames (lower .Title) }}
 {{- range $abilityNum, $ability := $frame.abilities -}}
