--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -92,3 +92,4 @@
 @import 'material-kit/sections/headers-extend';
 @import 'material-kit/sections/footers-extend';
 @import "material-kit/responsive";
+@import 'material-kit/misc-extend';
