--- a/layouts/fortuna/list.html
+++ b/layouts/fortuna/list.html
@@ -1,7 +1,7 @@
 {{ define "extra-styles" }}
 	<link rel="stylesheet" href="/assets/css/fortuna.css">
 {{ end }}
-{{- define "main" -}}
+{{- define "main-body" -}}
 <section class="section" style="background-color: #122734">
 	<div class="container">
 		<div class="row">
