--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,7 +1,3 @@
-<script src="/vendor/js/jquery.js"></script>
-<script src="/vendor/js/bootstrap.min.js"></script>
-<script src="/vendor/js/lazysizes.min.js"></script>
-<script src="/vendor/js/ls.unveilhooks.min.js"></script>
-<script src="/assets/js/hestia/material.js"></script>
-<script src="/assets/js/hestia/hestia.js"></script>
-<script src="/assets/js/main.js"></script>
+<script src="/assets/js/jquery.slim.min.js"></script>
+<script src="/assets/js/popper.min.js"></script>
+<script src="/assets/js/index.js"></script>
