Add lazysizes script

--- a/layouts/partials/site-scripts.html
+++ b/layouts/partials/site-scripts.html
@@ -1,3 +1,4 @@
+<script async src="/assets/js/lazysizes.js"></script>
 <script src="/assets/js/jquery.slim.min.js"></script>
 <script src="/assets/js/popper.min.js"></script>
 <script src="/assets/js/index.js"></script>
