Fix warframe links

--- a/layouts/warframe-builds/list.html
+++ b/layouts/warframe-builds/list.html
@@ -26,7 +26,7 @@
 						{{ if .link }}
 							<div class="col-6 col-sm-3 col-md-2">
 								<div class="warframe-element" id="{{ .name }}" data-roles="{{ $warframeRoles }}">
-									<a href="{{ .divnk }}" target="_blank">
+									<a href="{{ .link }}" target="_blank">
 										<h2>{{ .title }}</h2>
 										<img src="/images/glyphs/{{ .glyph }}" title="{{ .title }} Builds" alt="{{ .title }} Builds" />
 									</a>
