Fix table responsivness on the small screens

--- a/layouts/partials/voidtrader.html
+++ b/layouts/partials/voidtrader.html
@@ -1,7 +1,7 @@
 {{ if .trader.active}}
 <p><b>Location:</b> {{ .trader.location }} </p>
 
-<div class="table-responsive">          
+<div class="table-responsive-sm">          
 	<table class="table">
 		<thead>
 			<tr>
