--- a/layouts/partials/rotation-rewards.html
+++ b/layouts/partials/rotation-rewards.html
@@ -1,18 +1,20 @@
-<table class="table">
-	<thead>
-		<tr>
-			<th>Rotation A</th>
-			<th>Rotation B</th>
-			<th>Rotation C</th>
-		</tr>
-	</thead>
-	<tbody>
-		{{- range .rewards -}}
+<div class="table-responsive-sm">
+	<table class="table">
+		<thead>
 			<tr>
-				<td>{{ .RotationA }}</td>
-				<td>{{ .RotationB }}</td>
-				<td>{{ .RotationC }}</td>
+				<th>Rotation A</th>
+				<th>Rotation B</th>
+				<th>Rotation C</th>
 			</tr>
-		{{- end -}}
-	</tbody>
-</table>
+		</thead>
+		<tbody>
+			{{- range .rewards -}}
+				<tr>
+					<td>{{ .RotationA }}</td>
+					<td>{{ .RotationB }}</td>
+					<td>{{ .RotationC }}</td>
+				</tr>
+			{{- end -}}
+		</tbody>
+	</table>
+</div>
