Fix ability description font size when it includes paragraphs

--- a/src/styles/warframe-page/_sections.scss
+++ b/src/styles/warframe-page/_sections.scss
@@ -5,6 +5,14 @@
 
 .abiility-body {
 	color: white;
+
+	.content {
+		font-size: 16px;
+
+		p {
+			font-size: 16px;
+		}
+	}
 }
 
 .frame-first-ability {
