Add warframe builds page content

--- a/layouts/warframes/list.html
+++ b/layouts/warframes/list.html
@@ -6,8 +6,8 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 mx-auto header text-center px-1">
-				<h1><span class="warframe">Warframe </span>Builds</h1>
-				<p class="about-builds">Each warframe you can build in a thousand different ways and there’s a lot of room for tweaking on your end, so please don’t take it as if builds below were set in stone. You can of course copy builds exactly and it’s going to work just fine, but I would think about Warframe Builds below as more of an inspiration for your own builds because you can play around with different values: duration, efficiency, range, and even strength. And as long as you don’t stray too far away from the original idea of these warfame builds, it should still work. You’re not going to break it.</p>
+				<h1>Choose your next <span class="warframe">Warframe</span></h1>
+				<p class="about-builds"></p>
 			</div>
 			<div class="col-md-12 builds text-center pb-5">
 				<input id="damage" type="radio" name="role" checked="checked" />
