--- a/layouts/builds/all.html
+++ b/layouts/builds/all.html
@@ -6,8 +6,8 @@
 		<div class="row">
 			<div class="col-md-12 mt-5 pt-5">
 				<h1 class="title pt-5">{{ .Title }}</h1>
-				<p>{{ .Parent }}</p>
 				{{- partial "category/breadcrumbs.html" . -}}
+				<p>{{ .Content }}</p>
 			</div>
 
 			<div class="col-md-12">
