--- a/layouts/builds/all.html
+++ b/layouts/builds/all.html
@@ -11,23 +11,7 @@
 			</div>
 
 			<div class="col-md-12">
-				<ul class="nav nav-pills justify-content-center">
-					<li class="nav-item">
-						<a class="nav-link active" href="/builds/">All</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="/warframe-builds/">Warframe Builds</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#0">Primary Weapon Builds</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#0">Secondary Weapon Builds</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#0">Melee Builds</a>
-					</li>
-				</ul>
+				{{- partial "builds/menu.html" . -}}
 			</div>
 			
 			{{- range  .Paginator.Pages -}}
