--- a/layouts/builds/all.html
+++ b/layouts/builds/all.html
@@ -4,7 +4,7 @@
 {{- define "main-body" -}}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 mt-5 pt-5">
+			<div class="col-md-12 mt-5 pt-5 builds-category">
 				<h1 class="title pt-5">{{ .Title }}</h1>
 				{{- partial "category/breadcrumbs.html" . -}}
 				<p>{{ .Content }}</p>
