--- a/layouts/builds/all.html
+++ b/layouts/builds/all.html
@@ -1,14 +1,12 @@
-{{- define "custom-header" -}}
-<div></div>
-{{- end -}}
+
 {{- define "main-body" -}}
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 mt-5 pt-5 builds-category">
+<!-- 			<div class="col-md-12 mt-5 pt-5 builds-category">
 				<h1 class="title pt-5">{{ .Title }}</h1>
 				{{- partial "category/breadcrumbs.html" . -}}
 				<p>{{ .Content }}</p>
-			</div>
+			</div> -->
 
 			<div class="col-md-12">
 				{{- partial "builds/menu.html" . -}}
